--- a/index.html
+++ b/index.html
@@ -205,6 +205,6 @@
 </head>
   <body class="bg-slate-900 text-slate-900 overflow-hidden h-screen w-screen flex justify-center">
     <div id="root" class="h-full w-full max-w-[500px] bg-white shadow-2xl overflow-hidden relative"></div>
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
